[gd_scene load_steps=3 format=3 uid="expedition_menu_scene_1"]

[ext_resource path="res://scripts/ui/expedition_menu.gd" type="Script" id=1]

[node name="ExpeditionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Title" type="Label" parent="VBox"]
text = "Экспедиции"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ActiveExpeditionsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxActive" type="VBoxContainer" parent="VBox/HBox/ActiveExpeditionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ActiveLabel" type="Label" parent="VBox/HBox/ActiveExpeditionsPanel/VBoxActive"]
text = "Активные экспедиции:"
theme_override_font_sizes/font_size = 18

[node name="ActiveList" type="ScrollContainer" parent="VBox/HBox/ActiveExpeditionsPanel/VBoxActive"]
layout_mode = 2

[node name="ActiveItems" type="VBoxContainer" parent="VBox/HBox/ActiveExpeditionsPanel/VBoxActive/ActiveList"]
layout_mode = 2

[node name="CreatePanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxCreate" type="VBoxContainer" parent="VBox/HBox/CreatePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CreateLabel" type="Label" parent="VBox/HBox/CreatePanel/VBoxCreate"]
text = "Создать экспедицию:"
theme_override_font_sizes/font_size = 18

[node name="TypeLabel" type="Label" parent="VBox/HBox/CreatePanel/VBoxCreate"]
text = "Тип:"
theme_override_font_sizes/font_size = 16

[node name="TypeOption" type="OptionButton" parent="VBox/HBox/CreatePanel/VBoxCreate"]

[node name="DurationLabel" type="Label" parent="VBox/HBox/CreatePanel/VBoxCreate"]
text = "Длительность (часов):"
theme_override_font_sizes/font_size = 16

[node name="DurationSpinBox" type="SpinBox" parent="VBox/HBox/CreatePanel/VBoxCreate"]
max_value = 24.0
value = 1.0

[node name="CreateButton" type="Button" parent="VBox/HBox/CreatePanel/VBoxCreate"]
text = "Создать экспедицию"

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

